--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
+  <meta name="title" content="Podcast Alarm">
+  <meta name="description" content="Alarm clock app that plays podcast episodes whenever you want. You can even wake up to the latest episode each day. Full featured podcast player too, no need to have more than one app.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.podcastalarm.app/">
+  <meta property="og:title" content="Podcast Alarm">
+  <meta property="og:description" content="Alarm clock app that plays podcast episodes whenever you want. You can even wake up to the latest episode each day. Full featured podcast player too, no need to have more than one app.">
+  <meta property="og:image" content="/images/SitePreview.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.podcastalarm.app/">
+  <meta property="twitter:title" content="Podcast Alarm">
+  <meta property="twitter:description" content="Alarm clock app that plays podcast episodes whenever you want. You can even wake up to the latest episode each day. Full featured podcast player too, no need to have more than one app.">
+  <meta property="twitter:image" content="/images/SitePreview.png">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/darkly/bootstrap.min.css" crossorigin="anonymous">
 </head>
 
