--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <title>{{ page.title }}</title>
   <meta name="title" content="Podcast Alarm">
   <meta name="description" content="Alarm clock app that plays podcast episodes whenever you want. You can even wake up to the latest episode each day. Full featured podcast player too, no need to have more than one app.">
@@ -22,6 +24,17 @@
   <meta property="twitter:image" content="/images/SitePreview.png">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/darkly/bootstrap.min.css" crossorigin="anonymous">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131168990-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-131168990-1');
+  </script>
+
 </head>
 
 <body>
