--- a/_includes/blogPostRow.html
+++ b/_includes/blogPostRow.html
@@ -1,14 +1,11 @@
 <div class="jumbotron">
   <div class="row bgimg">
     <div class="col-sm-6">
-      <img src="{{ post.featured-image }}" width="100%"/>
+      <a href="{{ post.url }}" ><img src="{{ post.featured-image }}" width="100%"/></a>
     </div>
     <div class="col-sm-6">
-      <h4 class="display-3">{{ post.title }}</h4>
+      <a href="{{ post.url }}" ><h4 class="display-3 text-info">{{ post.title }}</h4></a>
       <p class="lead">{{ post.description }}</p>
-      <p class="lead">
-        <a class="btn btn-info btn-lg" href="{{ post.url }}" role="button">View</a>
-      </p>
     </div>
   </div>
   </div>
