--- a/_includes/tweetRow.html
+++ b/_includes/tweetRow.html
@@ -16,8 +16,8 @@
 
 <div class="container-fluid">
   <div class="row bgimg">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-6">
+    <div class="col-md-1"></div>
+    <div class="col-md-6">
       <br>
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">Podcast Alarm is released! You can download it now from the iOS App Store:
@@ -28,9 +28,9 @@
       </blockquote>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
-    <div class="col-sm-5">
+    <div class="col-md-5 d-none d-md-block">
       <br><br><br><br><br>
-      <h1>Learn something new every morning!</h1>
+      <h1 class=".d-none .d-xl-block">Learn something new every morning!</h1>
     </div>
   </div>
 </div>
