--- a/_includes/blogPostRow.html
+++ b/_includes/blogPostRow.html
@@ -4,7 +4,7 @@
       <a href="{{ post.url }}" ><img src="{{ post.featured-image }}" width="100%"/></a>
     </div>
     <div class="col-sm-6">
-      <a href="{{ post.url }}" ><h4 class="display-3 text-info">{{ post.title }}</h4></a>
+      <a href="{{ post.url }}" ><h1 class="text-info">{{ post.title }}</h1></a>
       <p class="lead">{{ post.description }}</p>
     </div>
   </div>
