--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,9 @@
   <meta property="twitter:description" content="Alarm clock app that plays podcast episodes whenever you want. You can even wake up to the latest episode each day. Full featured podcast player too, no need to have more than one app.">
   <meta property="twitter:image" content="/images/SitePreview.png">
 
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/darkly/bootstrap.min.css" crossorigin="anonymous">
 
 </head>
