New style file and added fb

--- a/_includes/tweetRow.html
+++ b/_includes/tweetRow.html
@@ -1,21 +1,10 @@
-<style type="text/css">
-  .bgimg {
-    background: url('/images/PodcastBackground.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: 600px;
-  }
-</style>
-
 <div class=" bg-secondary">
   <br>
   <br>
 </div>
 
 <div class="container-fluid">
-  <div class="row bgimg">
+  <div class="row bgimgtweet">
     <div class="col-md-1"></div>
     <div class="col-md-6">
       <br>
