--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/darkly/bootstrap.min.css" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -122,7 +122,7 @@
               <a href="/images/PressKit.pdf" class="text-info">Press Kit</a>
             </li>
             <li>
-              <a href="https://twitter.com/PodcastAlarm" class="text-info">Twitter</a>
+              <a href="https://app.us9.list-manage.com/subscribe/post?u=6411a4819178dbb20b42d5339&amp;id=a2d15f45e6" class="text-info">Android</a>
             </li>
           </ul>
 
@@ -141,15 +141,15 @@
               <!-- <a href="#!" class="text-info">Link 1</a> -->
             </li>
             <li>
-              <!-- <a href="#!" class="text-info">Link 2</a> -->
+
             </li>
             <li>
-              <!-- <a href="#!" class="text-info">Link 3</a> -->
+              <a target="_blank" href="https://twitter.com/PodcastAlarm" class="text-info">Twitter</a>
             </li>
             <li>
-              <!-- <a href="#!" class="text-info">Link 4</a> -->
-              <a href="https://app.us9.list-manage.com/subscribe/post?u=6411a4819178dbb20b42d5339&amp;id=a2d15f45e6" class="text-info">I'm on Android</a>
+              <a target="_blank" href="https://www.facebook.com/podcastalarm/" class="text-info">Facebook</a>
             </li>
+
           </ul>
 
         </div>
