--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@ layout: default
 
 </div>
 
+<!-- In this file to make use of .featuredImage -->
 <style type="text/css">
   .bgimg {
     background: url("{{ page.featured-image }}") no-repeat center center fixed;
