--- a/_includes/blogPostRow.html
+++ b/_includes/blogPostRow.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <div class="row bgimg">
+  <div class="row bgimgpost">
     <div class="col-sm-6">
       <a href="{{ post.url }}" ><img src="{{ post.featured-image }}" width="100%"/></a>
     </div>
