Lighthouse audit changes

--- a/_includes/blogPostRow.html
+++ b/_includes/blogPostRow.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <div class="row bgimgpost">
     <div class="col-sm-6">
-      <a href="{{ post.url }}" ><img src="{{ post.featured-image }}" width="100%"/></a>
+      <a href="{{ post.url }}" ><img src="{{ post.featured-image }}" alt="{{ post.featured-image-alt }}" width="100%"/></a>
     </div>
     <div class="col-sm-6">
       <a href="{{ post.url }}" ><h1 class="text-info">{{ post.title }}</h1></a>
