--- a/_includes/signupRow.html
+++ b/_includes/signupRow.html
@@ -16,7 +16,7 @@
       <div id="mc_embed_signup">
         <form action="https://app.us9.list-manage.com/subscribe/post?u=6411a4819178dbb20b42d5339&amp;id=a2d15f45e6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll" class="form-group form-inline">
-            <label for="mce-EMAIL"><strong>Sign up if you want news and updates  </strong></label>
+            <label for="mce-EMAIL" class="font-weight-bold" style="color: black;">Sign up if you want news and updates </label>
             <input type="email" value="" name="EMAIL" class="form-control form-control-md" id="mce-EMAIL" placeholder="email address" required>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6411a4819178dbb20b42d5339_a2d15f45e6" tabindex="-1" value=""></div>
