--- a/_includes/tweetRow.html
+++ b/_includes/tweetRow.html
@@ -10,10 +10,10 @@
       <br>
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">Podcast Alarm is released! You can download it now from the iOS App Store:
-          <a href="https://t.co/5KglzgoMk6">https://t.co/5KglzgoMk6</a>
-          <a href="https://t.co/8Kl4rQIzpT">pic.twitter.com/8Kl4rQIzpT</a>
+          <a rel="noreferrer" href="https://t.co/5KglzgoMk6">https://t.co/5KglzgoMk6</a>
+          <a rel="noreferrer" href="https://t.co/8Kl4rQIzpT">pic.twitter.com/8Kl4rQIzpT</a>
         </p>&mdash; Podcast Alarm (@PodcastAlarm)
-        <a href="https://twitter.com/PodcastAlarm/status/1179393599487844353?ref_src=twsrc%5Etfw">October 2, 2019</a>
+        <a rel="noreferrer" href="https://twitter.com/PodcastAlarm/status/1179393599487844353?ref_src=twsrc%5Etfw">October 2, 2019</a>
       </blockquote>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
