--- a/_includes/showcaseRow.html
+++ b/_includes/showcaseRow.html
@@ -11,7 +11,7 @@
           <h6 class="card-subtitle text-muted">Find out about the better way to wake up</h6>
         </div>
 
-        <img src="/images/HoldingPodcastAlarm.jpg" height="100%" width="100%" alt="" />
+        <img src="/images/HoldingPodcastAlarm.jpg" height="100%" width="100%" alt="Woman holding phone with podcast alarm app" />
 
         <div class="card-body">
           <p class="card-text">Play alarms whenever! No need to keep the app open.</p>
@@ -25,7 +25,7 @@
           <!-- <a href="#" class="card-link text-info">Learn More</a> -->
         </div>
         <div class="card-footer text-muted text-center">
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" height="45"/></a>
+          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" alt="Download on the Apple App store" height="45"/></a>
         </div>
       </div>
 
@@ -56,7 +56,7 @@
           <!-- <a href="#" class="card-link text-info">Learn More</a> -->
         </div>
         <div class="card-footer text-muted text-center">
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" height="45"/></a>
+          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" alt="Download on the Apple App store" height="45"/></a>
         </div>
       </div>
 
