New video and sitepreview

--- a/_includes/tweetRow.html
+++ b/_includes/tweetRow.html
@@ -3,24 +3,21 @@
   <br>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid" height="200">
   <div class="row bgimgtweet">
-    <div class="col-md-1"></div>
-    <div class="col-md-6">
+    <div class="col-4 col-sm-0"></div>
+    <div class="col-12 col-sm-12">
       <br>
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Podcast Alarm is released! You can download it now from the iOS App Store:
-          <a rel="noreferrer" href="https://t.co/5KglzgoMk6">https://t.co/5KglzgoMk6</a>
-          <a rel="noreferrer" href="https://t.co/8Kl4rQIzpT">pic.twitter.com/8Kl4rQIzpT</a>
-        </p>&mdash; Podcast Alarm (@PodcastAlarm)
-        <a rel="noreferrer" href="https://twitter.com/PodcastAlarm/status/1179393599487844353?ref_src=twsrc%5Etfw">October 2, 2019</a>
-      </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <br>
+        <video autoplay loop muted preload class="videoDemo">
+          <source src="/images/SideBySideDemoPodcastAlarm.mp4" type="video/mp4">
+          <source src="/images/SideBySideDemoPodcastAlarm.ogg" type="video/ogg">
+          Your browser does not support the video tag.
+        </video>
+        <br>
+        <br>
     </div>
-    <div class="col-md-5 d-none d-md-block">
-      <br><br><br><br><br>
-      <h1 class=".d-none .d-xl-block">Learn something new every morning!</h1>
-    </div>
+    <div class="col-4 col-sm-0"></div>
   </div>
 </div>
 
