Add back images

--- a/_includes/showcaseRow.html
+++ b/_includes/showcaseRow.html
@@ -11,7 +11,7 @@
           <h6 class="card-subtitle text-muted">Find out about the better way to wake up</h6>
         </div>
 
-        <img src="/images/HoldingPodcastAlarm.webp" height="100%" width="100%" alt="Woman holding phone with podcast alarm app" />
+        <img src="/images/HoldingPodcastAlarm.jpg" height="100%" width="100%" alt="Woman holding phone with podcast alarm app" />
 
         <div class="card-body">
           <p class="card-text">Play alarms whenever! No need to keep the app open.</p>
@@ -42,7 +42,7 @@
           <h6 class="card-subtitle text-muted">What about, curated lists of awesome podcasts from online resources?</h6>
         </div>
 
-        <img src="/images/HoldingPodcastAlarm2.webp" height="100%" width="100%" alt="" />
+        <img src="/images/HoldingPodcastAlarm2.jpg" height="100%" width="100%" alt="" />
 
         <div class="card-body">
           <p class="card-text">Find all the best Podcast Shows, by quickly seeing the ones recomended by the pros.</p>
