--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,18 +4,26 @@ layout: default
 
 <header class="post-header">
   <div class="bgimg"></div>
-
 </header>
 
 <br><br>
+
 <div class="container">
   <div class="row">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="col-sm-10">
+      <h1 class="post-title">{{ page.title }}</h1>
+      <br>
+      {{ content }}
+    </div>
+    <div class="col-sm-2">
+      <img src="/images/blog/me.jpeg" alt="..." class="rounded-circle" width="90">
+      <p class="font-weight-light">Jonathan Wilson</p>
+      <p class="font-weight-light">{{ page.date | date: '%B %d, %Y' }}</p>
 
+
+      <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" alt="Download on the Apple App store" height="45"></a>
+    </div>
   </div>
-  <br><br>
-  {{ content }}
-
 </div>
 
 <!-- In this file to make use of .featuredImage -->
