--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,6 +2,22 @@
 # Front matter comment to ensure Jekyll properly reads file.
 ---
 
+body {
+  font-family: proxima-nova,Helvetica Neue,Arial,sans-serif!important;
+  /* default is 1rem or 16px */
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+/* Increase all font sizes on mobile */
+@media (max-width: 767px) {
+  body {
+    /* default is 1rem or 16px */
+    font-size: 25px;
+  }
+}
+
 a:hover {
   color: transparent;
 }
