Nice new butttons and tweaks

--- a/_includes/showcaseRow.html
+++ b/_includes/showcaseRow.html
@@ -25,11 +25,9 @@
           <!-- <a href="#" class="card-link text-info">Learn More</a> -->
         </div>
         <div class="card-footer text-muted text-center">
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" alt="Download on the Apple App store" height="45"/></a>
+          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
         </div>
       </div>
-
-
 
     </div>
     <div class="col-sm-2"></div>
@@ -56,11 +54,9 @@
           <!-- <a href="#" class="card-link text-info">Learn More</a> -->
         </div>
         <div class="card-footer text-muted text-center">
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" alt="Download on the Apple App store" height="45"/></a>
+          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
         </div>
       </div>
-
-
 
     </div>
     <div class="col-sm-1"></div>
