--- a/_includes/blogPostRow.html
+++ b/_includes/blogPostRow.html
@@ -1,11 +1,12 @@
 <div class="jumbotron">
   <div class="row bgimgpost">
     <div class="col-sm-6">
-      <a href="{{ post.url }}" ><img src="{{ post.featured-image }}" alt="{{ post.featured-image-alt }}" width="100%"/></a>
+      <a href="{{ post.url }}"><img src="{{ post.featured-image }}" alt="{{ post.featured-image-alt }}" width="100%"/></a>
     </div>
     <div class="col-sm-6">
-      <a href="{{ post.url }}" ><h1 class="text-info">{{ post.title }}</h1></a>
+      <a href="{{ post.url }}"><h1 class="text-info">{{ post.title }}</h1></a>
       <p class="lead">{{ post.description }}</p>
+      <a target="\_blank" rel="noreferrer" href="https://www.linkedin.com/in/jonathanwilson0/" class="text-info mt-0"><img src="/images/blog/me.jpeg" class="align-self-start mr-3" alt="Jonathan Wilson - Podcast Alarm creator" class="rounded-circle" width="45"></a>
     </div>
   </div>
-  </div>
+</div>
