--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="/images/favicon.ico">
-  
+
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -87,45 +87,52 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" alt="Download on the Apple App store" height="45"/></a>
+          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
         </li>
       </ul>
     </div>
   </nav>
 
-
   {{ content }}
 
-  <!-- Footer -->
   <footer class="page-footer font-small stylish-color-dark pt-4">
 
-
-    {% include signupRow.html %}
+    <div class="container-fluid bg-info">
+      <div class="row">
+        <br/>
+        <br/>
+      </div>
+    </div>
     <br>
+
+    <ul class="list-unstyled list-inline text-center py-2">
+      <li class="list-inline-item">
+        <h5 class="mb-1">Subscribe to our free newsletter</h5>
+      </li>
+      <li class="list-inline-item">
+        <form action="https://app.us9.list-manage.com/subscribe/post?u=6411a4819178dbb20b42d5339&amp;id=a2d15f45e6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+          <input type="email" value="" name="EMAIL" class="form-control form-control-md" id="mce-EMAIL" placeholder="Email" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6411a4819178dbb20b42d5339_a2d15f45e6" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-md"></div>
+        </form>
+      </li>
+    </ul>
+    <hr>
 
     <!-- Footer Links -->
     <div class="container text-center text-md-left">
-
-      <!-- Grid row -->
       <div class="row">
 
-        <!-- Grid column -->
         <div class="col-md-4 mx-auto">
-
-          <!-- Content -->
           <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Podcast Alarm</h5>
           <p>Replace your alarm clock with a podcast alarm, and wake up listening to what you want.</p>
-
         </div>
-        <!-- Grid column -->
 
         <hr class="clearfix w-100 d-md-none">
 
-        <!-- Grid column -->
         <div class="col-md-2 mx-auto">
-
           <br>
-
           <ul class="list-unstyled">
             <li>
               <a href="/termsconditions/" class="text-info">Terms and Conditions</a>
@@ -140,68 +147,37 @@
               <a href="https://app.us9.list-manage.com/subscribe/post?u=6411a4819178dbb20b42d5339&amp;id=a2d15f45e6" class="text-info">Android</a>
             </li>
           </ul>
-
         </div>
-        <!-- Grid column -->
 
         <hr class="clearfix w-100 d-md-none">
 
-        <!-- Grid column -->
         <div class="col-md-2 mx-auto">
-
           <br>
-
           <ul class="list-unstyled">
-            <li>
-              <!-- <a href="#!" class="text-info">Link 1</a> -->
-            </li>
-            <li>
-
-            </li>
             <li>
               <a target="_blank" rel="noreferrer" href="https://twitter.com/PodcastAlarm" class="text-info">Twitter</a>
             </li>
             <li>
               <a target="_blank" rel="noreferrer" href="https://www.facebook.com/podcastalarm/" class="text-info">Facebook</a>
             </li>
-
+            <li>
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/company/podcastalarm/" class="text-info">Linkedin</a>
+            </li>
+            <li>
+              <a class="text-info" href="/blog/">Blog</a>
+            </li>
           </ul>
-
         </div>
-        <!-- Grid column -->
 
         <hr class="clearfix w-100 d-md-none">
 
-        <!-- Grid column -->
         <div class="col-md-2 mx-auto">
-
           <br><br>
-
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" alt="Download on the Apple App store" height="45"/></a>
-
+          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
         </div>
-        <!-- Grid column -->
 
       </div>
-      <!-- Grid row -->
-
     </div>
-    <!-- Footer Links -->
-
-    <hr>
-
-    <!-- Call to action -->
-    <!-- <ul class="list-unstyled list-inline text-center py-2">
-      <li class="list-inline-item">
-        <h5 class="mb-1">Register for free</h5>
-      </li>
-      <li class="list-inline-item">
-        <a href="#!" class="btn btn-danger btn-rounded">Sign up!</a>
-      </li>
-    </ul> -->
-    <!-- Call to action -->
-
-
   </footer>
 </body>
 
