--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,16 +12,22 @@ layout: default
   <div class="row">
     <div class="col-sm-10">
       <h1 class="post-title">{{ page.title }}</h1>
-      <br>
-      {{ content }}
+      <br> {{ content }}
+      {% include callToActionRow.html %}
     </div>
-    <div class="col-sm-2">
-      <img src="/images/blog/me.jpeg" alt="..." class="rounded-circle" width="90">
-      <p class="font-weight-light">Jonathan Wilson</p>
-      <p class="font-weight-light">{{ page.date | date: '%B %d, %Y' }}</p>
 
+    <div class="col-sm-2 text-center">
+      <img src="/images/blog/me.jpeg" alt="Jonathan Wilson - Podcast Alarm creator" class="rounded-circle" width="90">
 
-      <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/AppStoreButton.png" alt="Download on the Apple App store" height="45"></a>
+      <br><br>
+      <p class="font-weight-light authorText">by <a target="\_blank" rel="noreferrer" href="https://www.linkedin.com/in/jonathanwilson0/" class="text-info">Jonathan Wilson</a></p>
+      <p class="font-weight-light authorText">{{ page.date | date: '%B %d, %Y' }}</p>
+
+      <hr/>
+      <br>
+      <p class="font-weight-light authorText">Podcast Alarm</p>
+      <p class="font-weight-light authorText">Wake up inspired</p>
+      <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
     </div>
   </div>
 </div>
