--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,13 @@
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
+
+  {% if page.GoogleStructuredData %}
+    <script type="application/ld+json">
+      {{ page.GoogleStructuredData }}
+    </script>
+  {% endif %}
+
 </head>
 
 <body>
