Sitemap and videos on mobile

--- a/_includes/tweetRow.html
+++ b/_includes/tweetRow.html
@@ -9,7 +9,7 @@
     <div class="col-12 col-sm-12">
       <br>
       <br>
-        <video autoplay loop muted preload class="videoDemo">
+        <video playsinline autoplay loop muted preload class="videoDemo">
           <source src="/images/SideBySideDemoPodcastAlarm.mp4" type="video/mp4">
           <source src="/images/SideBySideDemoPodcastAlarm.ogg" type="video/ogg">
           Your browser does not support the video tag.
