--- a/_includes/videoRow.html
+++ b/_includes/videoRow.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="col-12 col-md-5 text-center">
-        <video autoplay height="650" loop muted preload id="video1">
+        <video playsinline autoplay height="650" loop muted preload id="video1">
           <source src="/images/PodcastAlarmDemo.mp4" type="video/mp4">
           <source src="/images/PodcastAlarmDemo.ogg" type="video/ogg">
           Your browser does not support the video tag.
