Update tag at bottom

--- a/_includes/callToActionRow.html
+++ b/_includes/callToActionRow.html
@@ -3,6 +3,6 @@
 <h3>Waking up with a podcast on iOS</h3>
 <p>Podcast Alarm is a fully featured podcast player and alarm. You can set up queues of your favourite
   epsidoes and listen to them whenever you like. Why not subscribe to your favourite podcast and have the latest episode
-wake you up every weekday morning.</p>
+wake you up every weekday morning. There are lots of screenshots and videos in our <a class="text-info" href="/blog/podcast-as-an-alarm-on-iPhone">"How to set a podcast as an alarm on iphone?"</a> blog post.</p>
 <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
 <br><br>
