Hide header on small screens

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<header class="post-header">
+<header class="post-header d-none d-lg-block">
   <div class="bgimg"></div>
 </header>
 
