--- a/_includes/showcaseRow.html
+++ b/_includes/showcaseRow.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row bg-Dark">
     <br><br><br>
-    <div class="col-sm-1"></div>
-    <div class="col-sm-4">
+    <div class="col-lg-1"></div>
+    <div class="col-lg-4">
 
       <div class="card mb-3">
         <h3 class="card-header">Alarm Creation</h3>
@@ -30,8 +30,8 @@
       </div>
 
     </div>
-    <div class="col-sm-2"></div>
-    <div class="col-sm-4">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-4">
 
       <div class="card mb-3">
         <h3 class="card-header">Podcast Discovery</h3>
@@ -59,7 +59,7 @@
       </div>
 
     </div>
-    <div class="col-sm-1"></div>
+    <div class="col-lg-1"></div>
     <br>
   </div>
 </div>
