--- a/_includes/videoRow.html
+++ b/_includes/videoRow.html
@@ -8,12 +8,14 @@
         Download and create a list of your favourite podcasts. There are thousands to choose from, you can <b>wake up to any topic imaginable.</b> Then, either play now or set a time in the future to hear that episode.
       </h3>
 
-      <br><br><br><br>
-      <div class="text-center">
+      <br><br>
+      <div class="text-center d-none d-lg-block">
+        <br><br>
         <!-- <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" height="45"/></a> -->
         <a href="https://www.producthunt.com/posts/podcast-alarm?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-podcast-alarm" target="_blank" rel="noreferrer"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=170570&theme=dark" alt="Podcast Alarm - Wake up inspired | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+        <br><br><br><br>
       </div>
-      <br><br><br><br>
+
     </div>
 
     <div class="col-12 col-md-5 text-center">
