Link out to new tab for app store

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,7 +120,7 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
+          <a target="\_blank" href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
         </li>
       </ul>
     </div>
@@ -206,7 +206,7 @@
 
         <div class="col-md-2 mx-auto">
           <br><br>
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
+          <a target="\_blank" href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
         </div>
 
       </div>
