--- a/_includes/showcaseRow.html
+++ b/_includes/showcaseRow.html
@@ -25,7 +25,7 @@
           <!-- <a href="#" class="card-link text-info">Learn More</a> -->
         </div>
         <div class="card-footer text-muted text-center">
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
+          <a target="\_blank" href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
         </div>
       </div>
 
@@ -54,7 +54,7 @@
           <!-- <a href="#" class="card-link text-info">Learn More</a> -->
         </div>
         <div class="card-footer text-muted text-center">
-          <a href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
+          <a target="\_blank" href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
         </div>
       </div>
 
