--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,38 +62,6 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
-    "name": "Podcast Alarm",
-    "operatingSystem": "iOS",
-    "applicationCategory": "EntertainmentApplication",
-    "review": {
-      "@type": "Review",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5"
-      },
-      "author": {
-        "@type": "Person",
-        "name": "jkeitz"
-      },
-      "reviewBody": "I have wanted to wake to podcasts for years, and now I finally can!  This isn’t just any old app, though. You can schedule multiple alarms for multiple podcasts. There is a nightstand mode showing the time all night. The best part? A developer who really cares. I posted one request at Facebook and Bam!  New feature (I asked that they make the time in nightstand mode float a bit to prevent burn in on OLED iPhones)."
-    },
-    "aggregateRating": {
-      "@type": "AggregateRating",
-      "ratingValue": "3.6",
-      "ratingCount": "32"
-    },
-    "offers": {
-      "@type": "Offer",
-      "price": "2.99",
-      "priceCurrency": "GBP"
-    }
-  }
-  </script>
-
 </head>
 
 <body>
@@ -103,28 +71,13 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <nav class="navbar navbar-expand navbar-light bg-light">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/blog/">Blog</a>
-        </li>
-      </ul>
+  <div class="container-fluid bg-info">
+    <div class='container text-center'>
+      <a class="navbar-brand" href="/">
+        <h1 class="text-white font-weight-bold text-uppercase">Restaurant<span class="text-base-color">Tech</span>Guide</h1>
+      </a>
     </div>
-    <div class="mx-auto order-0">
-      <a href="/"><img src="/images/PodcastAlarmLogo.png" alt="Podcast Alarms logo, the podcast icon with two bells on top to look like an alarm" width="45" height="45" class="rounded" /></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a target="\_blank" href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  </div>
 
   {{ content }}
 
@@ -140,14 +93,14 @@
 
     <ul class="list-unstyled list-inline text-center py-2">
       <li class="list-inline-item">
-        <h5 class="mb-1">Subscribe to our free newsletter</h5>
+        <h5 class="mb-1">Subscribe to our quarterly newsletter</h5>
       </li>
       <li class="list-inline-item">
-        <form action="https://app.us9.list-manage.com/subscribe/post?u=6411a4819178dbb20b42d5339&amp;id=a2d15f45e6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+        <form action="https://app.us9.list-manage.com/subscribe/post?u=6411a4819178dbb20b42d5339&amp;id=caf8114020" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
           <input type="email" value="" name="EMAIL" class="form-control form-control-md" id="mce-EMAIL" placeholder="Email" required>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6411a4819178dbb20b42d5339_a2d15f45e6" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-md"></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info btn-md"></div>
         </form>
       </li>
     </ul>
@@ -158,55 +111,28 @@
       <div class="row">
 
         <div class="col-md-4 mx-auto">
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Podcast Alarm</h5>
-          <p>Replace your alarm clock with a podcast alarm, and wake up listening to what you want.</p>
+          <br>
+          <h5 class="font-weight-bold text-uppercase text-left">Restaurant<span class="text-base-color">Tech</span>Guide</h5>
+          <p>Finding the latest technology trends in the restaurant industry. Tips, tricks, recommendations and guides to using technology to make your restaurant excel.</p>
         </div>
 
         <hr class="clearfix w-100 d-md-none">
 
         <div class="col-md-2 mx-auto">
           <br>
-          <ul class="list-unstyled">
-            <li>
-              <a href="/termsconditions/" class="text-info">Terms and Conditions</a>
-            </li>
-            <li>
-              <a href="/privacy-policy/" class="text-info">Privacy Policy</a>
-            </li>
-            <li>
-              <a href="/images/PressKit.pdf" class="text-info">Press Kit</a>
-            </li>
-            <li>
-              <a href="https://app.us9.list-manage.com/subscribe/post?u=6411a4819178dbb20b42d5339&amp;id=a2d15f45e6" class="text-info">Android</a>
-            </li>
-          </ul>
         </div>
 
         <hr class="clearfix w-100 d-md-none">
 
         <div class="col-md-2 mx-auto">
           <br>
-          <ul class="list-unstyled">
-            <li>
-              <a target="_blank" rel="noreferrer" href="https://twitter.com/PodcastAlarm" class="text-info">Twitter</a>
-            </li>
-            <li>
-              <a target="_blank" rel="noreferrer" href="https://www.facebook.com/podcastalarm/" class="text-info">Facebook</a>
-            </li>
-            <li>
-              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/company/podcastalarm/" class="text-info">Linkedin</a>
-            </li>
-            <li>
-              <a class="text-info" href="/blog/">Blog</a>
-            </li>
-          </ul>
         </div>
 
         <hr class="clearfix w-100 d-md-none">
 
         <div class="col-md-2 mx-auto">
           <br><br>
-          <a target="\_blank" href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
+
         </div>
 
       </div>
