--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,18 +2,17 @@
 layout: default
 ---
 
-<header class="post-header d-none d-lg-block">
-  <div class="bgimg"></div>
-</header>
-
-<br><br>
-
 <div class="container">
+  <br>
+  <img src="{{ page.featured-image }}" class="post-img" alt="...">
+<br>
+<br>
   <div class="row">
     <div class="col-sm-10">
       <h1 class="post-title">{{ page.title }}</h1>
+      <h6 class="card-tag">{{ page.categories }}</h6>
+
       <br> {{ content }}
-      {% include callToActionRow.html %}
     </div>
 
     <div class="col-sm-2 text-center">
@@ -25,21 +24,17 @@ layout: default
 
       <hr/>
       <br>
-      <p class="font-weight-light authorText">Podcast Alarm</p>
-      <p class="font-weight-light authorText">Wake up inspired</p>
-      <a target="\_blank" href="https://apps.apple.com/app/podcast-alarm/id1441890371"><img src="/images/apple.svg" alt="Download on the Apple App store" height="45"/></a>
+
     </div>
   </div>
-</div>
 
-<!-- In this file to make use of .featuredImage -->
-<style type="text/css">
-  .bgimg {
-    background: url("{{ page.featured-image }}") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: 500px;
-  }
-</style>
+<br>
+<hr>
+  <div class="row">
+  {% for post in site.posts offset:1 limit:3 %}
+    <div class="col-sm d-flex align-items-stretch">
+      {% include blogPostItem.html %}
+    </div>
+  {% endfor %}
+  </div>
+</div>
