--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,56 +3,43 @@
 
 <head>
   <!-- Google Tag Manager -->
-  <script>
-    (function(w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-WMTB792');
-  </script>
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PM2PT82');</script>
   <!-- End Google Tag Manager -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131168990-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166193655-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-131168990-1');
+    gtag('config', 'UA-166193655-1');
   </script>
+
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Podcast Alarm</title>
-  <meta name="title" content="Podcast Alarm">
-  <meta name="description" content="Alarm clock app that plays podcast episodes whenever you want. You can even wake up to the latest episode each day. Full featured podcast player too, no need to have more than one app.">
+  <title>Restaurant Tech Guide</title>
+  <meta name="title" content="Restaurant Tech Guide">
+  <meta name="description" content="Finding the latest technology trends in the restaurant industry. Tips, tricks, recommendations and guides to using technology to make your restaurant excel.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.podcastalarm.app/">
-  <meta property="og:title" content="Podcast Alarm">
-  <meta property="og:description" content="Alarm clock app that plays podcast episodes whenever you want. You can even wake up to the latest episode each day. Full featured podcast player too, no need to have more than one app.">
+  <meta property="og:url" content="https://www.RestaurantTechGuide.com/">
+  <meta property="og:title" content="Restaurant Tech Guide">
+  <meta property="og:description" content="Finding the latest technology trends in the restaurant industry. Tips, tricks, recommendations and guides to using technology to make your restaurant excel.">
   <meta property="og:image" content="/images/SitePreview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://www.podcastalarm.app/">
-  <meta property="twitter:title" content="Podcast Alarm">
-  <meta property="twitter:description" content="Alarm clock app that plays podcast episodes whenever you want. You can even wake up to the latest episode each day. Full featured podcast player too, no need to have more than one app.">
+  <meta property="twitter:url" content="https://www.RestaurantTechGuide.com/">
+  <meta property="twitter:title" content="Restaurant Tech Guide">
+  <meta property="twitter:description" content="Finding the latest technology trends in the restaurant industry. Tips, tricks, recommendations and guides to using technology to make your restaurant excel.">
   <meta property="twitter:image" content="/images/SitePreview.png">
 
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -67,7 +54,7 @@
 <body>
 
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMTB792"
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PM2PT82"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
