--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,12 +58,10 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <div class="container-fluid bg-info">
-    <div class='container text-center'>
-      <a class="navbar-brand" href="/">
-        <h1 class="text-white font-weight-bold text-uppercase">Restaurant<span class="text-base-color">Tech</span>Guide</h1>
+  <div class="container-fluid text-center bg-info">
+      <a class="navbar-brand " href="/">
+        <h1 class="text-white font-weight-bold text-uppercase logo">Restaurant<span class="text-base-color">Tech</span>Guide</h1>
       </a>
-    </div>
   </div>
 
   {{ content }}
@@ -100,22 +98,22 @@
         <div class="col-md-4 mx-auto">
           <br>
           <h5 class="font-weight-bold text-uppercase text-left">Restaurant<span class="text-base-color">Tech</span>Guide</h5>
-          <p>Finding the latest technology trends in the restaurant industry. Tips, tricks, recommendations and guides to using technology to make your restaurant excel.</p>
+          <p class="text-left">Finding the latest technology trends in the restaurant industry. Tips, tricks, recommendations and guides to using technology to make your restaurant excel.</p>
         </div>
 
-        <hr class="clearfix w-100 d-md-none">
+        <!-- <hr class="clearfix w-100 d-md-none"> -->
 
         <div class="col-md-2 mx-auto">
           <br>
         </div>
 
-        <hr class="clearfix w-100 d-md-none">
+        <!-- <hr class="clearfix w-100 d-md-none"> -->
 
         <div class="col-md-2 mx-auto">
           <br>
         </div>
 
-        <hr class="clearfix w-100 d-md-none">
+        <!-- <hr class="clearfix w-100 d-md-none"> -->
 
         <div class="col-md-2 mx-auto">
           <br><br>
